--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,13 @@ header {
 .header-menu {
     margin-left: auto;
 }
+.header-menu ul {
+    display: flex;
+}
 .header-menu li {
-    float: left;
     line-height: 100px;
     list-style-type: none;
+    text-align: center;
 }
 .header-menu a {
     background-color:rgb(176, 226, 255);
