--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,10 +13,10 @@
 @media (max-width: 600px) {
     .main-copy h1 {
         text-align: center;
-        font-size: 100px;
+        font-size: 75px;
     }
     .main-copy h2 {
-        font-size: 30px;
+        font-size: 27px;
     }
     .main-btn {
         display: flex;
@@ -29,7 +29,10 @@
 }
 
 /* ヘッダー */
-
+@media (max-width: 600px) {
+    .header-menu a {
+        font-size: 10px;
+    }
 /* プロフィール */
 
 /* 趣味とかのページ */
@@ -85,8 +88,8 @@
 
 @media (max-width: 600px) {
     .summonstitle1 {
-        font-size: 45px;
-        letter-spacing: 30px;
+        font-size: 40px;
+        letter-spacing: 25px;
     }
     .summonstitle2 {
         font-size: 25px;
