--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,8 +31,9 @@
 /* ヘッダー */
 @media (max-width: 600px) {
     .header-menu a {
-        font-size: 10px;
+        font-size: 8px;
     }
+}
 /* プロフィール */
 
 /* 趣味とかのページ */
