--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ main {
     text-align: center;
     letter-spacing: 50px;
     font-size: 100px;
-    margin: 300px 0 600px;
+    margin: 300px auto 600px;
 }
 .summonstitle2 {
     text-align: right;
