--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,9 +30,13 @@
 
 /* ヘッダー */
 @media (max-width: 600px) {
+    .header-icon img {
+        width: 75px;
+        padding-top: 10px;
+    }
     .header-menu a {
-        font-size: 12px;
-        padding: 0 20px;
+        font-size: 15px;
+        padding: 0 25px;
     }
 }
 /* プロフィール */
