--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,31 @@ header {
 .header-menu a:active {
     background-color:rgb(0, 217, 255);
 }
-.clear {
-    clear: left;
+/* 追加部分 */
+.humb {
+    display: none;
+    margin-left: auto;
+    width: 100px;
+    cursor: pointer;
 }
+.column-menu {
+    display: flex;
+    flex-direction: column;  
+}
+.column-menu li {
+    display: none;
+}
+.column-menu a {
+    background-color:rgba(176, 226, 255, 0.7);
+    padding: 0 40px;
+}
+.column-menu a:hover {
+    background-color: rgba(36, 167, 255, 0.7);
+}
+.column-menu a:active {
+    background-color:rgba(0, 217, 255, 0.7);
+}
+/* ここまで */
 
 /* メイン */
 main {
