--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ main {
 .summonstitle4 {
     text-align: center;
     font-size: 70px;
-    margin: 0 0 600px;
+    margin: 0 auto 600px;
 }
 .summonstitle5 {
     text-align: center;
@@ -271,8 +271,10 @@ main {
     text-align: center;
 }
 .slide {
-    width: 22%;
     display: none;
+}
+.s-img {
+    width: 22%;
 }
 .active {
     display: inline-block;
@@ -332,7 +334,6 @@ main {
     position: relative;
     top: 10px;
 }
-
 /* ポケモン */
 .p-img {
     width: 50%;
